# cpn-telegram-bot

./: .dockerignore  .pre-commit-config.yaml  .railwayignore  Dockerfile  README.md  compose.yaml  dev.Dockerfile  justfile  mongod.conf  nixpacks.toml  pyproject.toml  pyrightconfig.json  railway.json
.github/workflows/: pyright.yml
src/: cpn_core
src/cpn_tele_bot/: __main__.py  config_reader.py
src/cpn_tele_bot/bot/command_handlers/: start.py
src/cpn_tele_bot/models/: config.py
src/cpn_telegram_bot/: __main__.py  config_reader.py
src/cpn_telegram_bot/bot/command_handlers/: auth.py  info.py  start.py
src/cpn_telegram_bot/bot/decorator/: sudo.py
src/cpn_telegram_bot/bot/handlers/: auth.py  check.py  deauth.py  info.py  start.py
src/cpn_telegram_bot/bot/types/: confirm.py
src/cpn_telegram_bot/bot/utils/: authorized.py  sudo.py
src/cpn_telegram_bot/entities/: authorized_chat.py  sudo_user.py  user_data.py
src/cpn_telegram_bot/models/: config.py
src/cpn_telegram_bot/modules/: get_data.py  setup_logger.py
src/cpn_telegram_bot/services/: mongodb.py
