[project]
name = "cpn-telegram-bot"
version = "0.0.0"
description = "Telegram bot for cpn"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beanie>=1.29.0",
  "cpn-core==0.4.0",
  "python-telegram-bot>=21.10",
]

[project.scripts]
cpn-tele-bot = "cpn_tele_bot:__main__.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpn_tele_bot"]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "commitizen>=4.1.0"]
